--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
 	<script src="x-frame-bypass.js" type="module"></script>
 </head>
 <body>
-	<iframe is="x-frame-bypass" src="https://play.geforcenow.com/"></iframe>
+	<iframe is="x-frame-bypass" src="shuttle.cf"></iframe>
 </body>
 </html>
